Fix cross-process GC contention and preserve conflict content identity